--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 @layer components{
   .input{
-    @apply bg-white rounded-full px-4 py-2 text-sm w-28 focus:w-72 focus:outline-none focus:ring  focus:ring-yellow-700 sm:w-64 transition-all duration-300;
+    @apply bg-white rounded-full px-4 py-2 text-xl w-28 focus:w-72 focus:outline-none focus:ring  focus:ring-yellow-400 sm:w-64 transition-all duration-300 border border-gray-300 focus:border-yellow-300;
   }
 }
 
